# dem2mujoco

./: README.md  pyproject.toml
src/dem2mujoco/: __init__.py  cli.py  heightfield.py  mjcf.py  preview_pipeline.py  view_xml.py  visualize.py
src/dem2mujoco/scripts/: make_terrain.py
src/scripts/: view_terrain.py
